--- a/src/Header.css
+++ b/src/Header.css
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 5px;
-    margin-right: 15px;
+    /* margin-right: 15px; */
 
 }
 
@@ -98,4 +98,14 @@
 {
     padding-right: 20px;
     padding-left: 3px;
+}
+
+.arrow_icon
+{
+    color: var(--white);
+    /* height: 45px !important; */
+    transform: scale(1.4);
+    padding-left: 0px;
+    padding-right: 4px;
+    /* font-size: 20px !important; */
 }
