--- a/src/Header.css
+++ b/src/Header.css
@@ -109,3 +109,14 @@
     padding-right: 4px;
     /* font-size: 20px !important; */
 }
+
+.drop{
+    background-color: #374151;
+    color: white;
+    cursor: pointer;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    position: relative;
+}
