--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,4 @@
+/* SS04 CODE */
 .home
 {
     display: flex;
@@ -23,13 +24,54 @@
 
 .home__row
 {
-    display: flex;
+    display: inline-table;
+    float: left;
     /* Brings all product in one line */
     z-index:1;
     margin-left: 5px;
     margin-right: 5px;
+    padding-left: 40px;
+    margin-top: 60px;
 } 
 
+
+
+
+
+
+
+
+
+
+
+/* My code...all items are in 1 line */
+/* .home
+{
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1300px;
+}
+.home_img
+{
+    width: 100%;
+    z-index:-1;
+    margin-bottom: -250px; 
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0));
+
+
+
+ } 
+
+.home__row
+{
+    display: flex;
+    z-index:1;
+    margin-left: 5px;
+    margin-right: 5px;
+} 
+ */
 
 
 
