--- a/src/Product.css
+++ b/src/Product.css
@@ -1,26 +1,30 @@
- .product
+.product
 {
-    display: flex;
-    flex-direction: column; /*If removed, title, price, img, button side-by-side is displayed*/
-    align-items: center; 
+     /*If removed, title, price, img, button side-by-side is displayed*/
+    float:left;
     /*All items aligned to center.Thus button size also reduced.*/
-    justify-content: flex-end; 
     /*explore this*/
+    align-items: center;
+    justify-content: center; 
     background-color: #E5E7EB;
     /* background-color: white; */
-    margin: 10px;
-    padding: 20px;
-    width: 100%;
-    max-height: 350px;
+    margin-top: 10px;
+    padding: 10px;
+    width: 200px;
+    height: 400px;
+    max-height: 400px;
     min-width: 100px; 
     /*Due to this, product is shifted to left frm center.Container is taking whole segment i.e. like yt search channel.Uncomment border to see*/
-    /* border: 5px solid; */
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 5px;
     z-index: 1; 
+    margin-right: 10px;
 }
 .product_info
 {
     width: 100%; /*To align text of product like title,price ,rating to left*/
     height: 100px;
+    justify-content: center;
     margin-bottom: 15px;
 }
 .product > img
@@ -48,10 +52,69 @@
 .product_rating
 {
     display: flex;
+} 
+
+
+
+
+
+
+
+
+
+
+
+/*My code...all products in 1 line*/
+/* .product
+{
+    display: flex;
+    flex-direction: column; If removed, title, price, img, button side-by-side is displayed
+    align-items: center; 
+    All items aligned to center.Thus button size also reduced.
+    justify-content: flex-end; 
+    explore this
+    background-color: #E5E7EB;
+     background-color: white; 
+    margin: 10px;
+    padding: 20px;
+    width: 100%;
+    max-height: 350px;
+    min-width: 100px; 
+    Due to this, product is shifted to left frm center.Container is taking whole segment i.e. like yt search channel.Uncomment border to see
+     border: 5px solid; 
+    z-index: 1; 
+}
+.product_info
+{
+    width: 100%; To align text of product like title,price ,rating to left
+    height: 100px;
+    margin-bottom: 15px;
+}
+.product > img
+{
+    max-height: 200px;
+    width: 100%;
+    object-fit: contain;
+    margin-bottom: 15px;
 }
 
+.product > button
+{
+   background :rgb(106, 195, 247);
+    border: 1px solid;
+    margin-top: 10px;
+    color: #111;
+} 
 
-
+ .product_price
+{
+    margin-top: 5px;
+}
+ 
+.product_rating
+{
+    display: flex;
+} */
 
 
 
@@ -87,4 +150,5 @@
 {
     display: flex;
     flex-direction: row;
-} */
+} 
+*/
