Price prediction models added & integrated in React

--- a/src/ASeller_CreateProduct.css
+++ b/src/ASeller_CreateProduct.css
@@ -112,3 +112,17 @@ td, th {
     background-color: #dddddd;
   } */
   
+
+.brand
+{
+    height: 30px;
+    width: 326px;
+    margin-bottom: 10px;
+}
+
+.condition
+{
+    height: 30px;
+    width: 326px;
+    margin-bottom: 10px;
+}
